Bug 469280 - Screen corruption after switching back from TTY and after coming back from sleep.
Summary: Screen corruption after switching back from TTY and after coming back from sl...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.27.4
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 469443 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-05-02 17:59 UTC by frankgrimy
Modified: 2024-04-26 23:14 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments
Screen corruption in both screens. Note the horizontal banding. (1.21 MB, image/jpeg)
2023-05-02 17:59 UTC, frankgrimy
Details
Output after switching back from TTY (journalctl --user-unit plasma-kwin_wayland.service --boot 0) (2.78 KB, text/plain)
2023-05-14 23:16 UTC, frankgrimy
Details
Output before switching to TTY (drm_info) (2.78 KB, text/plain)
2023-05-14 23:27 UTC, frankgrimy
Details
Output after switching back from TTY (drm_info) (12.95 KB, text/plain)
2023-05-14 23:32 UTC, frankgrimy
Details
Output before switching to TTY (drm_info) (12.94 KB, text/plain)
2023-05-14 23:37 UTC, frankgrimy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description frankgrimy 2023-05-02 17:59:42 UTC
Created attachment 158631 [details]
Screen corruption in both screens. Note the horizontal banding.

STEPS TO REPRODUCE
1. Switch from the desktop to a TTY.
2. Switch back from the TTY to the desktop.

1. Suspend to RAM.
2. Wait for a minute or so.
3. Power up the computer

OBSERVED RESULT
Screen corruption after following the steps.

EXPECTED RESULT
No screen corruption at all.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.27.4
KDE Frameworks Version: 5.105.0
Qt Version: 5.15.9
Kernel Version: 6.2.13-zen-1-zen (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
Hardware:
Processors: 12 × AMD Ryzen 5 5500
Memory: 15.5 GiB of RAM
Graphics Processor: VERDE (AMD Radeon HD 7750)

Notes:
- My screens are stacked. The upper one runs at 60 Hz and the lower at 75 Hz. Making both of them run at 60 Hz makes no difference.
- The GUI doesn't seem to crash. Pressing the Super key opens the App Menu, but since the screen content is corrupted, it cannot be read.
- Workaround: switching to the SDDM TTY (Ctrl+Alt+F1) and then returning to the GUI (tty2).
Comment 1 Axel 2023-05-14 13:31:37 UTC
*** Bug 469443 has been marked as a duplicate of this bug. ***
Comment 2 Zamundaaa 2023-05-14 17:34:57 UTC
Please attach the kwin log (journalctl --user-unit plasma-kwin_wayland --boot 0) from after causing the issue, and the output of drm_info (https://gitlab.freedesktop.org/emersion/drm_info) from before and after the issue happens
Comment 3 frankgrimy 2023-05-14 23:16:38 UTC
Created attachment 158952 [details]
Output after switching back from TTY (journalctl --user-unit plasma-kwin_wayland.service --boot 0)

This output was obtained after running journalctl, while the screen was corrupted, via SSH with my laptop.
There is no difference in journalctl output from before and after switching to TTY (checked with diff).
Comment 4 frankgrimy 2023-05-14 23:27:01 UTC
Created attachment 158953 [details]
Output before switching to TTY (drm_info)

Note that on line 5, says "DRM_CLIENT_CAP_ATOMIC not supported".
Also, on line 166, mode is "1920x1080@74.97 driver phsync pvsync"
Comment 5 frankgrimy 2023-05-14 23:32:13 UTC
Created attachment 158954 [details]
Output after switching back from TTY (drm_info)

Same deal with "DRM_CLIENT_CAP_ATOMIC not supported", but this time in line 166, mode was reverted to default "Mode: 1920x1080@60.00 preferred driver phsync pvsync"
Comment 6 frankgrimy 2023-05-14 23:34:27 UTC
Comment on attachment 158953 [details]
Output before switching to TTY (drm_info)

>may 14 18:49:04 MSI-DESKTOP systemd[670]: Starting KDE Window Manager...
>may 14 18:49:04 MSI-DESKTOP systemd[670]: Started KDE Window Manager.
>may 14 18:49:04 MSI-DESKTOP kwin_wayland[711]: No backend specified, automatically choosing drm
>may 14 18:49:04 MSI-DESKTOP kwin_wayland[711]: kwin_wayland_drm: drmSetClientCap for Atomic Mode Setting failed. Using legacy mode on GPU "/dev/dri/card0"
>may 14 18:49:04 MSI-DESKTOP kwin_wayland[711]: OpenGL vendor string:                   AMD
>may 14 18:49:04 MSI-DESKTOP kwin_wayland[711]: OpenGL renderer string:                 AMD Radeon HD 7700 Series (verde, LLVM 15.0.7, DRM 3.52, 6.3.1-arch1-1)
>may 14 18:49:04 MSI-DESKTOP kwin_wayland[711]: OpenGL version string:                  4.6 (Core Profile) Mesa 23.0.3
>may 14 18:49:04 MSI-DESKTOP kwin_wayland[711]: OpenGL shading language version string: 4.60
>may 14 18:49:04 MSI-DESKTOP kwin_wayland[711]: Driver:                                 Unknown
>may 14 18:49:04 MSI-DESKTOP kwin_wayland[711]: GPU class:                              Unknown
>may 14 18:49:04 MSI-DESKTOP kwin_wayland[711]: OpenGL version:                         4.6
>may 14 18:49:04 MSI-DESKTOP kwin_wayland[711]: GLSL version:                           4.60
>may 14 18:49:04 MSI-DESKTOP kwin_wayland[711]: Mesa version:                           23.0.3
>may 14 18:49:04 MSI-DESKTOP kwin_wayland[711]: Linux kernel version:                   6.3.1
>may 14 18:49:04 MSI-DESKTOP kwin_wayland[711]: Requires strict binding:                no
>may 14 18:49:04 MSI-DESKTOP kwin_wayland[711]: GLSL shaders:                           yes
>may 14 18:49:04 MSI-DESKTOP kwin_wayland[711]: Texture NPOT support:                   yes
>may 14 18:49:04 MSI-DESKTOP kwin_wayland[711]: Virtual Machine:                        no
>may 14 18:49:05 MSI-DESKTOP kwin_wayland[711]: kwin_xkbcommon: XKB: inet:323:58: unrecognized keysym "XF86EmojiPicker"
>may 14 18:49:05 MSI-DESKTOP kwin_wayland[711]: kwin_xkbcommon: XKB: inet:324:58: unrecognized keysym "XF86Dictate"
>may 14 18:49:05 MSI-DESKTOP kwin_wayland_wrapper[786]: (WW) Option "-listen" for file descriptors is deprecated
>may 14 18:49:05 MSI-DESKTOP kwin_wayland_wrapper[786]: Please use "-listenfd" instead.
>may 14 18:49:05 MSI-DESKTOP kwin_wayland_wrapper[786]: (WW) Option "-listen" for file descriptors is deprecated
>may 14 18:49:05 MSI-DESKTOP kwin_wayland_wrapper[786]: Please use "-listenfd" instead.
>may 14 18:49:05 MSI-DESKTOP kwin_wayland_wrapper[808]: The XKEYBOARD keymap compiler (xkbcomp) reports:
>may 14 18:49:05 MSI-DESKTOP kwin_wayland_wrapper[808]: > Warning:          Unsupported maximum keycode 708, clipping.
>may 14 18:49:05 MSI-DESKTOP kwin_wayland_wrapper[808]: >                   X11 cannot support keycodes above 255.
>may 14 18:49:05 MSI-DESKTOP kwin_wayland_wrapper[808]: Errors from xkbcomp are not fatal to the X server
Comment 7 frankgrimy 2023-05-14 23:37:57 UTC
Created attachment 158955 [details]
Output before switching to TTY (drm_info)

Sorry, had uploaded the wrong file before.

Note that on line 5, says "DRM_CLIENT_CAP_ATOMIC not supported".
Also, on line 166, mode is "1920x1080@74.97 driver phsync pvsync"
Comment 8 frankgrimy 2023-05-15 00:02:43 UTC
Some observations:
- About the screen mode changes on TTY switch, the screen frequency regression to 60 Hz is noticeable but is not informed by KScreen, which shows 75 Hz.
- Even though I'm not an expert on this, it seems that the lack of DRM_CLIENT_CAP_ATOMIC support on my graphics card and some problem with KWin handling that, might be the cause of the screen corruption. 
- In the duplicated bug referenced before, the user has a Radeon HD 6310, which seems to be pre-GCN (one gen before my GPU). That could mean that this bug might be replicable with HD 7000 series GPUs or older.
- Running drm_info on my laptop (Intel UHD Graphics 620) shows support for DRM_CLIENT_CAP_ATOMIC, and there are no artifacts at all.

PS: somehow, got baited into this 2016 article that might be related to this issue.
VT Switching with Atomic Modeset.
https://blog.ffwll.ch/2016/01/vt-switching-with-atomic-modeset.html
Comment 9 frankgrimy 2023-05-15 00:10:15 UTC
Also, running sudo journalctl -b 0 --grep drm sometimes shows a flooded journal with a "Page flip failed" error that said that there was no space left on device (IIRC).
Can't remember in which case did it happen, but it seems it was when I was using the "radeon" module rather than "amdgpu".
If it happens again, I'll post that output here.
BTW, the screen corruption shows up with any of those modules.
Comment 10 Bug Janitor Service 2023-05-17 15:33:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4115
Comment 11 Zamundaaa 2023-05-18 11:02:44 UTC
Git commit ecc66a03d0535cdd94247b32341e6af89bd3a436 by Xaver Hugl.
Committed on 18/05/2023 at 10:19.
Pushed by zamundaaa into branch 'master'.

backends/drm: force a modeset after tty switches with legacy

We don't know what the current mode is, or if the display is even enabled
or whatever. Always do a modeset to be sure everything is correct

M  +6    -0    src/backends/drm/drm_gpu.cpp
M  +1    -0    src/backends/drm/drm_pipeline.h
M  +5    -0    src/backends/drm/drm_pipeline_legacy.cpp

https://invent.kde.org/plasma/kwin/commit/ecc66a03d0535cdd94247b32341e6af89bd3a436
Comment 12 frankgrimy 2023-10-20 17:48:06 UTC
Hi.

I've noticed that this issue is partially solved, because the commit only fixes TTY switching, but not when the computer is powered on after sleep, or when the screen powers off due to the energy management timeout.

It's not the same kind of corruption though, since the glitches involve one of my screens not turning on, and the other one refreshing at a very low rate (like 2-5 fps).

I'm not sure if this is the same bug, but in case it isn't, please close this report and tell me if you need me to file it as another bug.
Comment 13 frankgrimy 2023-10-20 17:49:47 UTC
Oh, by the way I'm testing KDE 6 from source, built with kdesrc-build from branch master.
Comment 14 Valerio Galdo 2023-12-06 18:39:31 UTC
Comment on attachment 158631 [details]
Screen corruption in both screens. Note the horizontal banding.

I've got the same bug with KDE Neon
Sistema operativo: KDE neon 5.27
Versione di KDE Plasma: 5.27.10
Versione di KDE Frameworks: 5.113.0
Versione di Qt: 5.15.11
Versione del Kernel: 6.2.0-34-generic (64 bit)
Piattaforma grafica: Wayland
Processori: 4 × AMD Phenom(tm) II X4 965 Processor
Memoria: 3,8 GiB di RAM
Processore grafico: AMD CAICOS
Comment 15 Zamundaaa 2024-04-24 16:37:30 UTC
Do the DPMS issues still happen with released Plasma 6?
Comment 16 frankgrimy 2024-04-26 21:19:27 UTC
(In reply to Zamundaaa from comment #15)
> Do the DPMS issues still happen with released Plasma 6?

They seem gone! Although some versions ago, when the screen went off by timeout, some garbage was displayed, but moving the mouse was enough to "clean" that. I'mma keep you updated if it happens again, but for now seems fixed.

Thank you for your work <3
Comment 17 Zamundaaa 2024-04-26 23:14:08 UTC
Cool. Just reopen if it happens again