backends/drm: force a modeset after tty switches with legacy

We don't know what the current mode is, or if the display is even enabled
or whatever. Always do a modeset to be sure everything is correct

BUG: 469280